--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@ant-design/icons": "^4.7.0",
+    "@remix-run/router": "^1.0.3",
+    "formik": "^2.2.9",
+    "formik-antd": "^2.0.4",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux-saga": "^1.2.1",
+    "redux-thunk": "^2.4.2",
+    "web-vitals": "^2.1.4",
+    "yub": "^0.11.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
