--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@remix-run/router": "^1.0.3",
+    "axios": "^1.1.3",
     "formik": "^2.2.9",
     "formik-antd": "^2.0.4",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-i18next": "^12.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
